@@ -372,10 +372,10 @@ setup_pattern(const char *pattern, size_t *len)
 {
 	size_t is_multibyte = 0;
 	int c, c2;
-	size_t buflen = 0;
+	size_t buflen;
 	mbstate_t mbs;
 	bool has_anchor = false;
-	char *buf = NULL;
+	char *buf;
 	char *dest;
 	const char *src, *end;
 
@@ -391,21 +391,12 @@ setup_pattern(const char *pattern, size_t *len)
 	 * escaped characters translated, and generate the regex
 	 * from that. 
 	 */
+	buf = (char *) malloc(*len + 1);
 	if (buf == NULL) {
-		buf = (char *) malloc(*len + 1);
-		if (buf == NULL) {
-			fprintf(stderr, "%s: malloc failed\n", __func__);
-			exit(EXIT_FAILURE);
-		}
-		buflen = *len;
-	} else if (*len > buflen) {
-		buf = (char *) realloc(buf, *len + 1);
-		if (buf == NULL) {
-			fprintf(stderr, "%s: realloc failed\n", __func__);
-			exit(EXIT_FAILURE);
-		}
-		buflen = *len;
+		fprintf(stderr, "%s: malloc failed\n", __func__);
+		exit(EXIT_FAILURE);
 	}
+	buflen = *len;
 	dest = buf;
 
 	while (src < end) {
