@@ -1,3 +1,7 @@
+2015-04-09         Andrew J. Schorr     <aschorr@telemetry-investments.com>
+
+	* testdfa.c (setup_pattern): Rationalize buffer size computations.
+
 2014-12-18         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* testdfa.c (setup_pattern): Do not waste a byte at the end of a string.
