@@ -1,3 +1,7 @@
+2015-04-09         Andrew J. Schorr     <aschorr@telemetry-investments.com>
+
+	* bindarr.c (do_bind_array): Undo Arnold's change of 2014-12-18.
+
 2014-12-18         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* bindarr.c (do_bind_array): Do not waste a byte at the end of a string.
