@@ -1,3 +1,12 @@
+2015-04-09         Andrew J. Schorr     <aschorr@telemetry-investments.com>
+
+	* awkgram.y (yyerror): Rationalize buffer size computations. Remove
+	old valgrind workarounds.
+	* debug.c (gprintf): Rationalize buffer size computations.
+	(serialize_subscript): Ditto.
+	* io.c (iop_finish): Rationalize buffer size computations.
+	* profile.c (pp_string): Correct space allocation computation.
+
 2015-04-08        John E. Malmberg       <wb8tyw@qsl.net>
 
        * custom.h: VMS shares some code paths with ZOS_USS in
